Added save screen to .stl file, useful to print on 3D Printer
Added function to shift bits on Hex Editor
Added TempleOS GUI Style
Added QNX GUI Style
Added menu function to sync local snapshot to remote using ZRCP
Added ZRCP commands: open-menu, print-error
Added setting to force CHR$ 128 mode on ZX81
Added search function to locate menu entries
Added .zmenu type files to generate launcher menus

* Improvements:

Allow to load Next .nex/.snx/.sna snapshots with additional files without having to copy them on the mmc file (it mounts automatically the esxdos handler)
Allow to limit max cpu turbo on Next
Allow to not save configuration when exiting ZEsarUX
Allow to select normal ZEsarUX logo or X Anniversary logo
Allow to seng ZENG snapshots more frequently (even every 20 ms)
Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
Allow autorewind setting for real tape too
Allow to disable Spectrum colours on real video mode too
Allow to press hotkeys at On Screen Keyboard
Allow autoload when inserting QL mdv/flp
Show 2 microdrive and 1 floppy icon on QL, instead of just one icon
Improved file selector:
- scrolling the current directory field if it does not fit on the window
- can change extension filter
- when saving files, cursor is located at the file field, and a file name is suggested
- file selection zone has a different color

Improved ZX Vision:
- Changed left click mouse behaviour: when pressing left mouse button out of a window, it will close all menus.
  If you need to keep menu open and set focus on emulated machine, just left click and also press shift key.
- Improve window title background when not all buttons are visible
- Improve clicking and drawing an always visible window
- Menus can no longer be minimized (that had no sense)
- Process switcher: unminimize windows when selecting them and they were minimized
- Process switcher: now it can be set to be always visible
- Process switcher: icon names are more descriptive