@@ -18,6 +18,7 @@ Comandos ZRCP agregados: open-menu, print-error
 Agregada Configuración para forzar el modo CHR$ 128 en ZX81
 Agregada función de búsqueda para buscar entradas del menú.
 Agregado tipo de archivos .zmenu para lanzar archivos
+Agregado mas antiguos programas/juegos mios de Spectrum
 
 * Mejoras:
 
@@ -32,6 +33,7 @@ Permitir deshabilitar los colores de Spectrum también en el modo de video real
 Permitir presionar teclas de acceso rápido en el teclado en pantalla
 Permitir autocarga al insertar mdv/flp en QL
 Mostrar 2 iconos de microdrive y 1 floppy en QL, en vez de mostrar solo un icono
+Recordar ultima ruta utilizada en cinta de salida
 Mejorado selector de archivos:
 - desplazando el campo de directorio actual si no cabe en la ventana
 - puede cambiar filtro de extensiones
