@@ -18,6 +18,7 @@ Added ZRCP commands: open-menu, print-error
 Added setting to force CHR$ 128 mode on ZX81
 Added search function to locate menu entries
 Added .zmenu type files to generate launcher menus
+Added more vintage Spectrum programs/games from me
 
 * Improvements:
 
@@ -32,6 +33,7 @@ Allow to disable Spectrum colours on real video mode too
 Allow to press hotkeys at On Screen Keyboard
 Allow autoload when inserting QL mdv/flp
 Show 2 microdrive and 1 floppy icon on QL, instead of just one icon
+Remember last path used on output tape
 Improved file selector:
 - scrolling the current directory field if it does not fit on the window
 - can change extension filter
